# prompted

./: 0000-input-macro.md  0000-inputln.md  Cargo.toml  LICENSE  README.md  README.tpl
docs/: settings.html  source-files.js
docs/prompted/: all.html  fn.eflush.html  macro.input.html
examples/: cylon.rs  guess.rs  phases.rs
src/: lib.rs
