# Copyright © 2017 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "prompted"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[dev-dependencies]
rand = "0.3.0"
