# Copyright © 2017 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "prompted"
version = "0.2.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2021"

[dev-dependencies]
rand = "0.8.0"
