# Copyright © 2017 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "prompted"
version = "0.2.8"
edition = "2021"
authors = ["Bart Massey <bart.massey@gmail.com>"]
description = "Macros for input and prompting."
license = "MIT"
documentation = "https://docs.rs/prompted"
homepage = "https://github.com/BartMassey/prompted"
repository = "https://github.com/BartMassey/prompted"
keywords = ["input", "prompt"]
categories = ["command-line-interface"]

[dev-dependencies]
rand = "0.8.5"
version-sync = "0.9.4"

[badges.maintenance]
status = "actively-developed"
